# encoder-rs

./: .gitignore  Cargo.toml  LICENSE
src/: button.rs  encoder.rs  lib.rs  rotary.rs  time.rs
