[package]
name = "simple_encoder"
version = "0.2.0-dev"
edition = "2021"
authors = ["Vladislav Podporkin"]
categories = ["embedded", "encoder", "button"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.embedded-hal]
version = "^0.2"
features = ["unproven"]

[dependencies.fugit]
version = "^0.3"
